syntax = "proto3";

package user;

service UserService {
  
  rpc Login (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string username = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
}
